--- a/view/user_info.html
+++ b/view/user_info.html
@@ -87,155 +87,10 @@
  <script src="../js/components/footer.js"></script>
  <script src="../js/components/bookBlockList.js"></script>
  <script src="../js/components/catalogue.js"></script>
+ <script src="../js/components/chapter.js"></script>
  
  
  <script>
-   var chapter = Vue.extend({
-      template: 
-      '<ul class="nav"><li v-link="{path: \'/bookBlockList\'}"><span class="circular"></span><span class="title_name">轻小说</span></li><li v-if="showFlag === 999"><span class="circular"></span><span class="title_name">画集</span></li><li v-link="{path: \'/works\'}"><span class="circular"></span><span class="title_name">创建作品</span></li></ul>'
-      +'<div class="content"><div class="chapter"><span>章节</span><span>chapter</span><a class="hoverBlock"  href="javascript:;"><p class="hoverBlockActive"><img src="../img/list_up.jpg"><span>收起</span></p><p class="hoverBlockNotActive"><img src="../img/list_up2.jpg"><span>收起</span></p></a><div class="labelTitle clear"><label class="label">标题:</label><input type="text" class="input" placeholder="请输入章节名"/></div><div class="inputTextarea clear"><textarea id="ipt-content-post" required="" spellcheck="false" placeholder="" class="form-control input-sm" style="display: none;"></textarea><div class="chapter_handle"><div class="handle_right"><div><span class="btn" v-on:click="submitFn">保存章节</span><span class="btn">提交审核</span></div></div></div></div></div></div>'
-    ,data:{
-        id: '',
-      }
-    ,route: { 
-        data() {
-            this.getBookListFn();
-        } 
-    },
-      ready: function() {
-        this.editorFn();
-      }
-      ,methods: {
-          submitFn: function() {
-              this.URLRoot = 'http://a8397550.eicp.net:21628';
-              var _URL = this.URLRoot + '/content/saveOrUpdateContent.shtml'
-              const href = window.location.href;
-              this.id = href.substring(href.lastIndexOf('/') + 1, href.length);
-              var _data = {
-                  formatText: this.editor.$txt.formatText(),      //文本格式化内容
-                    html: this.editor.$txt.html(),      //文本html内容
-                    contentTitle: "宅男的穿越",    // 内容名称
-                    volumeId: this.id, // 卷id
-                    contentId: null,
-              };
-              Vue.http.headers.common['JSESSIONID'] = localStorage.getItem('JSESSIONID');
-              Vue.http.post(_URL, _data).then(
-                (response) => {
-                  console.log(response);
-                },
-                (err) => {
-                  console.log(err);
-                });
-          },
-        getBookListFn: function() {
-          this.URLRoot = 'http://a8397550.eicp.net:21628';
-          var _URL = this.URLRoot + '/content/findContent.shtml'
-          var _data = {};
-          const href = window.location.href;
-          this.id = href.substring(href.lastIndexOf('/') + 1, href.length);
-          _data.contentId = this.id;
-          Vue.http.get(_URL, _data).then(
-            (response) => {
-              console.log(response);
-            },
-            (err) => {
-              console.log(err);
-            });
-        },
-        editorFn:function() {
-          var textarea = document.getElementById('ipt-content-post');
-          this.editor = new wangEditor(textarea);
-          this.editor.config.uploadImgUrl = 'http://a8397550.eicp.net:21628/content/upload.shtml';
-          this.editor.config.emotions = {
-            'default': {
-              title: '轻悦娘',
-              data: [
-                {
-                  'icon': 'http://www.qcacg.com/img/不明所以然.jpg',
-                  'value': '[不明所以然]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/伤心欲绝.jpg',
-                  'value': '[伤心欲绝]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/发呆.jpg',
-                  'value': '[发呆]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/吃惊.jpg',
-                  'value': '[吃惊]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/哭泣.jpg',
-                  'value': '[哭泣]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/害羞.jpg',
-                  'value': '[害羞]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/就是那个.jpg',
-                  'value': '[就是那个]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/微笑.jpg',
-                  'value': '[微笑]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/恼怒.jpg',
-                  'value': '[恼怒]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/悲伤.jpg',
-                  'value': '[悲伤]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/战斗力渣渣.jpg',
-                  'value': '[战斗力渣渣]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/抛媚眼.jpg',
-                  'value': '[抛媚眼]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/早就看穿一切.jpg',
-                  'value': '[早就看穿一切]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/汗.jpg',
-                  'value': '[汗]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/菜刀.jpg',
-                  'value': '[菜刀]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/那个有没有.jpg',
-                  'value': '[那个有没有]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/震惊.jpg',
-                  'value': '[震惊]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/高兴.jpg',
-                  'value': '[高兴]'
-                },
-                {
-                  'icon': 'http://www.qcacg.com/img/默默地看着.jpg',
-                  'value': '[默默地看着]'
-                }
-              ]
-            }
-    
-          };
-          this.editor.create();
-        }
-      }
-   });
-   
-   
   var router = new VueRouter();
   router.map({
     '/bookBlockList': { component: bookBlockList },
