--- a/view/catalog.html
+++ b/view/catalog.html
@@ -5,12 +5,15 @@
 		<title>轻创文学网-目录页</title>
 		<link rel="stylesheet" href="../css/main.css" />
 		<link rel="stylesheet" href="../css/catalog.css" />
+    	<link rel="stylesheet" href="../css/headerOrFooter.css" />
+		<link rel="stylesheet" href="../css/LOgin.css" />
+		<link rel="stylesheet" href="../css/jquery-ui.min.css" />
 	</head>
 	<script type="text/javascript" src="../js/vue.js"></script>
-	<body id="mask" 
+	<body id="mask" id="app"
 			v-bind:style="popup === true? 'overflow:hidden':''">
 
-	  <iframe id="qcacg-header" style="height: 56px;width: 100%;min-width:1200px;border: 0px;overflow: hidden;" src="../public/public-header.html"></iframe>
+	  <myheader></myheader>
 		<div id="search"></div>
 		<div class="index" >
 			<div class="index_Line"></div>
@@ -509,7 +512,13 @@
 			</div>
 		</div>
 
-	  <iframe style="height: 240px;width: 100%;min-width:1200px;border: 0px;overflow: hidden;" src="../public/public-footer.html"></iframe>
+	  <myfooter></myfooter>
+	<script src="../js/apis/vueHttp.js"></script>
+  	<script src="../js/apis/conf.js"></script>
+	<script type="text/javascript" src="../js/vue.min.js" ></script>
+	<script type="text/javascript" src="../js/components/header.js" ></script>
+	<script type="text/javascript" src="../js/components/footer.js" ></script>
+	<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>	
 	</body>
 	<script>
 		var vuePractice = new Vue({
