--- a/view/login.html
+++ b/view/login.html
@@ -4,12 +4,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>轻创文学网-登入页</title>
-	</head>
+	<link rel="stylesheet" href="../css/headerOrFooter.css" />
 	<link rel="stylesheet" href="../css/main.css" />
 	<link rel="stylesheet" href="../css/LOgin.css" />
 	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
-	<body>
-		<iframe id="qcacg-header" style="position: relative;z-index: 2;height: 56px;width: 100%;min-width:1200px;border: 0px;overflow: hidden;" src="../public/public-header.html"></iframe>
+	</head>
+	<body id="app">
+		<myheader></myheader>
 		<div style="position: relative;width: 100%;min-width: 1200px;">
 			<img src="../img/background-jpg.jpg" style="margin-top: -55px;width: 100%;"/>
 			<form class="Login" id="Login">
@@ -36,10 +37,16 @@
 				</ul>
 			</form>
 		</div>
-		
-		<iframe style="height: 240px;width: 100%;min-width:1200px;border: 0px;overflow: hidden;" src="../public/public-footer.html"></iframe>
+		<myfooter></myfooter>
 	</body>
-<script type="text/javascript" src="../js/apis/conf.js"></script>
+	<script src="../js/apis/vueHttp.js"></script>
+  	<script src="../js/apis/conf.js"></script>
+	<script type="text/javascript" src="../js/vue.min.js" ></script>
+	<script type="text/javascript" src="../js/components/header.js" ></script>
+	<script type="text/javascript" src="../js/components/footer.js" ></script>
+	<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>	
+	
+
 <script type="text/javascript" src="../js/jquery-1.11.1.js"></script>
 <script type="text/javascript" src="../js/jquery-ui.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.validate.js"></script>
