--- a/view/ranking.html
+++ b/view/ranking.html
@@ -3,11 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>轻创文学网-排行榜</title>
-		<link rel="stylesheet" href="../css/main.css" />
-		<link rel="stylesheet" href="../css/ranking.css" />
+		
+    <link rel="stylesheet" href="../css/ranking.css" />
+	<link rel="stylesheet" href="../css/headerOrFooter.css" />
+	<link rel="stylesheet" href="../css/main.css" />
+	<link rel="stylesheet" href="../css/LOgin.css" />
+	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
 	</head>
-	<body>
-	  <iframe id="qcacg-header" style="height: 56px;width: 100%;min-width:1200px;border: 0px;overflow: hidden;" src="../public/public-header.html"></iframe>
+	<body id="app">
+	  <myheader></myheader>
 	  <div id="background"></div>
 	  <div id="Title">
 	  	<ul>
@@ -201,6 +205,12 @@
 	      		<li class="goto"><input type="text"  value="" /><span>/1211</span><a>转页</a></li>
 	      	</ul>
       	</div>
-	  <iframe style="height: 240px;width: 100%;min-width:1200px;border: 0px;overflow: hidden;" src="../public/public-footer.html"></iframe>
+	<myfooter></myfooter>
 	</body>
+    <script src="../js/apis/vueHttp.js"></script>
+  	<script src="../js/apis/conf.js"></script>
+	<script type="text/javascript" src="../js/vue.min.js" ></script>
+	<script type="text/javascript" src="../js/components/header.js" ></script>
+	<script type="text/javascript" src="../js/components/footer.js" ></script>
+	<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>	
 </html>
