--- a/view/user_info.html
+++ b/view/user_info.html
@@ -83,7 +83,7 @@
     '/works': { component: works },
     '/catalogue/:id':{ component: catalogue },
     '/chapter/:id':{ component: chapter },
-    '/chapter_edit/:id':{ component: chapter },
+    '/chapter_edit/:id':{ component: chapter_edit },
   })
   var App = Vue.extend({ });
   App.component('myfooter', footer);
