--- a/css/register.css
+++ b/css/register.css
@@ -47,7 +47,7 @@ body li{
 	margin: -35px 33px 0 0;
 	cursor: pointer;
 }
-.regist p a {
+.regist p .a {
   line-height: 46px;
 	width: 114px;
 	height: 44px;
@@ -62,7 +62,7 @@ body li{
 .regist .regist_input {
 	margin: 11px 0 0 39px;
 }
-.regist a {
+.regist .btn_a {
 	display: block;
 	width: 310px;
 	height: 54px;
