--- a/view/login.html
+++ b/view/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 	<head>
@@ -29,11 +29,11 @@
 					<label>记住登入状态</label>
 				</p>
 				<div id="popup-captcha"></div>
-				<a class="btn btn_submit" id="btn-login">登入</a>
+				<a class="btn btn_submit a" id="btn-login">登入</a>
 				<ul>
-					<li>忘记密码</li>
+					<li><a>忘记密码</a></li>
 					<li>|</li>
-					<li>注册新帐号</li>
+					<li><a style="color:#000000" :href="path.TemprootPath + '/view/register.html'">注册新帐号</a></li>
 				</ul>
 			</form>
 		</div>
