--- a/view/register.html
+++ b/view/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
@@ -7,7 +7,7 @@
 	
 	<link rel="stylesheet" href="../css/register.css" />
 	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
-	    <link rel="stylesheet" href="../css/ranking.css" />
+	<link rel="stylesheet" href="../css/ranking.css" />
 	<link rel="stylesheet" href="../css/headerOrFooter.css" />
 	<link rel="stylesheet" href="../css/main.css" />
 	<link rel="stylesheet" href="../css/LOgin.css" />
@@ -25,7 +25,7 @@
 				</p>
 				<p class="line">
 					<input name="verification" placeholder=" 输入验证码" class="regist_Veri" />
-					<a class="btn verificationBtn">获取验证码</a>
+					<a class="btn verificationBtn a">获取验证码</a>
 				</p>
 				<p class="line">
 					<input class="input" type="password" name="password" placeholder=" 密码"/>
@@ -43,20 +43,15 @@
 				</p>
 				<input type="checkbox" checked="checked" class="regist_input"/>
 				<label>用户服务协议</label>
-				<p class="regist_p">立即登入</p>
-				<a class="btn btn_submit">注册</a>
+				<p class="regist_p"><a style="color:#000000" :href="path.TemprootPath + '/view/login.html'">立即登入</a></p>
+				<a class="btn btn_submit btn_a">注册</a>
 				<div id="popup-captcha"></div>
 			</form>
 		</div>
 	<myfooter></myfooter>
 	</body>
-	<script src="../js/apis/vueHttp.js"></script>
-  	<script src="../js/apis/conf.js"></script>
-	<script type="text/javascript" src="../js/vue.min.js" ></script>
-	<script type="text/javascript" src="../js/components/header.js" ></script>
-	<script type="text/javascript" src="../js/components/footer.js" ></script>
-	<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>
-<script type="text/javascript" src="../js/apis/conf.js"></script>	
+	
+	
 <script type="text/javascript" src="../js/jquery-1.11.1.js"></script>
 
 <script type="text/javascript" src="../js/jquery.validate.js"></script>
@@ -65,7 +60,7 @@
 "use strict"
 $(function() {
   // 主URL地址
-  var Url = "http://a8397550.eicp.net:21628";
+
 
   $('.regist').animate({
     height: '512px'
@@ -76,6 +71,7 @@ $(function() {
     show: false,
     hide: false
   });
+ 
 
   // 登入框动态弹出 end
   var handlerPopup = function(captchaObj) {
@@ -207,7 +203,7 @@ $(function() {
     var _data = {};
     _data.telephone = document.getElementsByName('user')[0].value;
     $.ajax({
-      url: PathList.registerTelephoneCode',
+      url: PathList.registerTelephoneCode,
       type: "POST",
       dataType: "JSON",
       data: _data,
@@ -272,4 +268,10 @@ $(function() {
 
 });		
 </script>
+<script src="../js/apis/vueHttp.js"></script>
+  	<script src="../js/apis/conf.js"></script>
+	<script type="text/javascript" src="../js/vue.min.js" ></script>
+	<script type="text/javascript" src="../js/components/header.js" ></script>
+	<script type="text/javascript" src="../js/components/footer.js" ></script>
+	<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>
 </html>
