--- a/view/register.html
+++ b/view/register.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>轻创文学网-注册页</title>
+		<title>轻创文学网--注册页</title>
 	</head>
 	<link rel="stylesheet" href="../css/main.css" />
 	<link rel="stylesheet" href="../css/register.css" />
