--- a/view/register.html
+++ b/view/register.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>轻创文学网--注册页</title>
 	</head>
+	<link rel="stylesheet" href="../css/headerOrFooter.css" />
 	<link rel="stylesheet" href="../css/main.css" />
 	<link rel="stylesheet" href="../css/register.css" />
 	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
-	<body>
+	<body id="app">
 	<myheader></myheader>
 	<div style="position: relative;width: 100%;min-width: 1200px;">
 			<img src="../img/background-jpg.jpg" style="margin-top: -55px;width: 100%;" />
@@ -20,7 +21,7 @@
 				</p>
 				<p class="line">
 					<input name="verification" placeholder=" 输入验证码" class="regist_Veri" />
-					<a class="btn verificationBtn">获取验证码</a>
+					<a class="btn verificationBtn a">获取验证码</a>
 				</p>
 				<p class="line">
 					<input class="input" type="password" name="password" placeholder=" 密码"/>
@@ -38,8 +39,8 @@
 				</p>
 				<input type="checkbox" checked="checked" class="regist_input"/>
 				<label>用户服务协议</label>
-				<p class="regist_p">立即登入</p>
-				<a class="btn btn_submit">注册</a>
+				<p class="regist_p"><a style="color:#000000" :href="path.TemprootPath + '/view/login.html'">立即登入</a></p>
+				<a class="btn btn_submit btn_a">注册</a>
 				<div id="popup-captcha"></div>
 			</form>
 		</div>
