--- a/view/login.html
+++ b/view/login.html
@@ -17,7 +17,7 @@
 				<img src="../img/logo-1.png" class="Login_img"/>
 				<p class="line">
 					<input  type="password" style="position: absolute; top: -999px" />
-					<input class="input" name="user" placeholder="请输入手机号" autocomplete="off" />
+					<input class="input" name="user" placeholder="请输入手机号" autocomplete="off"  color="black"/>
 					<img src="../img/lock-1.png"/>
 				</p>
 				<p class="line">
