--- a/css/LOgin.css
+++ b/css/LOgin.css
@@ -25,11 +25,12 @@ body li{
 	border-radius: 8px;
 	font-size: 18px;
 	background: #bb759a;
-	box-shadow: 0 3px 9px rgba(0,0,0,.5);
+	box-shadow:inset 0 3px 9px rgba(0,0,0,.5);
 	border: 1px solid #6c4274;
 	margin: 10px 0 0 30px;
 	opacity:0.5;
 	padding-left: 10px;
+	
 }
 .Login p img {
 	float: right;
